--- a/login/login.html
+++ b/login/login.html
@@ -11,7 +11,7 @@
 			<h1>Absen</h1>
 			<input type="email" placeholder="Email" />
 			<input type="password" placeholder="Password" />
-			<button>Login</button>
+			<button class="loginButton">Login</button>
 		</form>
 	</div>
 	<div class="form-container loginGuru-container">
@@ -20,7 +20,7 @@
 			<input type="email" placeholder="Email" />
 			<input type="password" placeholder="Password" />
 			<a href="#">Lupa Password?</a>
-			<button>Login</button>
+			<button class="loginButton">Login</button>
 		</form>
 	</div>
 	<div class="overlay-container">
@@ -28,18 +28,16 @@
 			<div class="overlay-panel overlay-left">
 				<h1>Selamat Datang</h1>
 				<p>Login lewat halaman Absen untuk masuk ke aplikasi E-Absen</p>
-				<button class="ghost" id="signIn">Login Guru</button>
+				<button class="ghost" id="loginGuru">Login Guru</button>
 			</div>
 			<div class="overlay-panel overlay-right">
 				<h1>Selamat Datang</h1>
 				<p>Masuk ke halaman Login Guru untuk masuk kedalam dashboard</p>
-				<button class="ghost" id="signUp">Absen</button>
+				<button class="ghost" id="absen">Absen</button>
 			</div>
 		</div>
 	</div>
 </div>
-
-
 <script src="assets/js/login.js"></script>
 </body>
 </html>
