rename siswa's folder

--- a/index.html
+++ b/index.html
@@ -1,46 +1,66 @@
 <!DOCTYPE html>
-<html style="font-size: 16px;" lang="en"><head>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta charset="utf-8">
-    <meta name="keywords" content="">
-    <meta name="description" content="">
-    <title>Home</title>
-    <link rel="stylesheet" href="style.css" media="screen">
-<link rel="stylesheet" href="Home.css" media="screen">
-    <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
-    <script class="u-script" type="text/javascript" src="script.js" defer=""></script>
-    <link id="u-theme-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i">
-    <link id="u-page-google-font" rel="stylesheet" href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700,700i,900,900i">
+<html style="font-size: 16px" lang="en">
 
-    <meta name="theme-color" content="#478ac9">
-    <meta property="og:title" content="Home">
-    <meta property="og:type" content="website">
-  <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-2893"><div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/sd.png" alt="" data-image-width="220" data-image-height="248">
-        <a href="#" class="u-image u-logo u-image-2" data-image-width="776" data-image-height="792">
-          <img src="images/Lambang-tut-wuri-handayani.webp" class="u-logo-image u-logo-image-1">
-        </a>
-        <p class="u-align-center u-custom-font u-heading-font u-text u-text-black u-text-default u-text-1">RAPOR UPTD SD NEGERI 1 TERUSAN </p>
-        <p class="u-align-left u-text u-text-default u-text-2"> kurikulum.kemdikbud.go.id/kurikulum-merdeka</p>
-      </div></header>
-    <section class="u-clearfix u-image u-shading u-section-1" id="sec-78b1" data-image-width="1280" data-image-height="720">
-      <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
-        <p class="u-align-center u-custom-font u-font-merriweather u-text u-text-default u-text-1">MANAGEMEN RAPOR SISWA<br> UPTD SD NEGERI 1 TERUSAN
-        </p>
-      </div>
-    </section>
-    <section class="u-clearfix u-gradient u-section-2" id="sec-ca3c">
-      <div class="u-clearfix u-sheet u-sheet-1">
-        <a href="login/login.html" class="u-border-none u-btn u-button-style u-gradient u-hover-palette-1-dark-1 u-none u-text-black u-btn-1">ABSEN</a>
-        <a href="login/login.html" class="u-border-none u-btn u-button-style u-gradient u-hover-palette-1-dark-1 u-none u-text-black u-btn-2">LOGIN</a>
-      </div>
-    </section>
-    
-    <section class="u-backlink u-clearfix u-grey-80">
-      <a class="u-link" href="#" target="_blank">
-        <span>&copy; KELOMPOK 4</span>
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="utf-8" />
+  <meta name="keywords" content="" />
+  <meta name="description" content="" />
+  <title>Home</title>
+  <link rel="stylesheet" href="style.css" media="screen" />
+  <link rel="stylesheet" href="Home.css" media="screen" />
+  <script class="u-script" type="text/javascript" src="jquery.js" defer=""></script>
+  <script class="u-script" type="text/javascript" src="script.js" defer=""></script>
+  <link id="u-theme-google-font" rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Roboto:100,100i,300,300i,400,400i,500,500i,700,700i,900,900i|Open+Sans:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i" />
+  <link id="u-page-google-font" rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Merriweather:300,300i,400,400i,700,700i,900,900i" />
+
+  <meta name="theme-color" content="#478ac9" />
+  <meta property="og:title" content="Home" />
+  <meta property="og:type" content="website" />
+  <meta data-intl-tel-input-cdn-path="intlTelInput/" />
+</head>
+
+<body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode" data-lang="en">
+  <header class="u-clearfix u-header u-header" id="sec-2893">
+    <div class="u-clearfix u-sheet u-sheet-1">
+      <img class="u-image u-image-contain u-image-default u-preserve-proportions u-image-1" src="images/sd.png" alt=""
+        data-image-width="220" data-image-height="248" />
+      <a href="#" class="u-image u-logo u-image-2" data-image-width="776" data-image-height="792">
+        <img src="images/Lambang-tut-wuri-handayani.webp" class="u-logo-image u-logo-image-1" />
       </a>
-    </section>
-  
-</body></html>
+      <p class="u-align-center u-custom-font u-heading-font u-text u-text-black u-text-default u-text-1">
+        RAPOR UPTD SD NEGERI 1 TERUSAN
+      </p>
+      <p class="u-align-left u-text u-text-default u-text-2">
+        kurikulum.kemdikbud.go.id/kurikulum-merdeka
+      </p>
+    </div>
+  </header>
+  <section class="u-clearfix u-image u-shading u-section-1" id="sec-78b1" data-image-width="1280"
+    data-image-height="720">
+    <div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+      <p class="u-align-center u-custom-font u-font-merriweather u-text u-text-default u-text-1">
+        MANAGEMEN RAPOR SISWA<br />
+        UPTD SD NEGERI 1 TERUSAN
+      </p>
+    </div>
+  </section>
+  <section class="u-clearfix u-gradient u-section-2" id="sec-ca3c">
+    <div class="u-clearfix u-sheet u-sheet-1">
+      <a href="login/login.html"
+        class="u-border-none u-btn u-button-style u-gradient u-hover-palette-1-dark-1 u-none u-text-black u-btn-1">ABSEN</a>
+      <a href="login/login.html"
+        class="u-border-none u-btn u-button-style u-gradient u-hover-palette-1-dark-1 u-none u-text-black u-btn-2">LOGIN</a>
+    </div>
+  </section>
+
+  <section class="u-backlink u-clearfix u-grey-80">
+    <a class="u-link" href="#" target="_blank">
+      <span>&copy; KELOMPOK 4</span>
+    </a>
+  </section>
+</body>
+
+</html>
